# project-1

./: .gitignore  CMakeList.txt  CMakeLists.txt  CMakePresets.json  CodeConvention.md  Design.md  GameDesign.md  README.md  vcpkg.json
Assets/Data/Enemies/: Enemies.json
Assets/Data/Text/: Combat.json  Common.json  Manifest.json  UI.json
Src/: Main.cpp
Src/Engine/Core/: Game.cpp  Game.h  Macros.h  Style.h
Src/Engine/Data/: EnemyCatalog.cpp  MessageCatalog.cpp  MessageCatalog.h  TextCatalog.cpp  TextCatalog.h
Src/Engine/Entities/: CharacterStats.h  Entity.h  Player.cpp  Player.h
Src/Engine/Items/: InventoryComponent.cpp  InventoryComponent.h  ItemDropSystem.cpp  ItemDropSystem.h  ItemTypes.h
Src/Engine/Systems/: Camera.cpp  CombatSystem.cpp  CombatSystem.h  DamagePopupSystem.cpp  TurnSystem.cpp  TurnSystem.h
Src/Engine/UI/: MessageLog.cpp
Src/Engine/UI/Panel/: InfoPanel.cpp  InfoPanel.h  InventoryOverlayPanel.cpp  InventoryOverlayPanel.h  MessageLogPanel.cpp  MessageLogPanel.h  MinimapPanel.cpp
Src/Engine/World/: DungeonGenerator.cpp  DungeonManager.cpp  DungeonManager.h
assets/data/: enemies.json
src/: Game.cpp  Game.h  Main.cpp  TimeManager.cpp  TimeManager.h  main.cpp  time_manager.cpp
src/Engine/Core/: CoreMacros.h  Game.cpp  Game.h  Macros.h  Style.h
src/Engine/Data/: EnemyCatalog.cpp  EnemyCatalog.h
src/Engine/Entities/: CharacterStats.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/Engine/Items/: ItemDropSystem.cpp  ItemDropSystem.h  ItemTypes.h
src/Engine/Systems/: Camera.cpp  Camera.h  CombatSystem.cpp  CombatSystem.h  DamagePopupSystem.h  FOV.cpp  FOV.h  TurnSystem.cpp  TurnSystem.h
src/Engine/UI/: Camera.cpp  Camera.h  MessageLog.cpp  MessageLog.h  UILayout.h
src/Engine/UI/Panel/: InfoPanel.cpp  InfoPanel.h  MessageLogPanel.cpp  MessageLogPanel.h  MinimapPanel.cpp  MinimapPanel.h  PortraitPanel.cpp  PortraitPanel.h  StatusPanel.cpp  StatusPanel.h  UIPanel.h
src/Engine/World/: DungeonGenerator.cpp  DungeonGenerator.h  DungeonManager.cpp  DungeonManager.h  Map.cpp  Map.h  Tile.h
src/default/: main.cpp
src/engine/core/: game.cpp  game.h
src/engine/manager/: input_manager.cpp  input_manager.h  time_manager.cpp
